tests/baselines/reference/isolatedModulesCollideWithGlobal.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Boolean'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'Number'.
error TS2318: Cannot find global type 'Object'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
file1.ts(1,37): error TS2304: Cannot find name 'Window'.
file1.ts(3,21): error TS2304: Cannot find name 'window'.
file1.ts(4,9): error TS2304: Cannot find name 'window'.
file1.ts(14,1): error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'Number'.
!!! error TS2318: Cannot find global type 'Object'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
==== file1.ts (4 errors) ====
    declare function getChildWindows(): Window[];
                                        ~~~~~~
!!! error TS2304: Cannot find name 'Window'.
    export function updateUrl(newHash: string) {
        if (newHash !== window.location.hash) {
                        ~~~~~~
!!! error TS2304: Cannot find name 'window'.
            window.history.replaceState(null, '', newHash);
            ~~~~~~
!!! error TS2304: Cannot find name 'window'.
            for (const window of getChildWindows()) {
                window.history.replaceState(null, '', newHash);
            }
        }
    }
    
    {
        const console = 'local';
    }
    console.log('ok');
    ~~~~~~~
!!! error TS2584: Cannot find name 'console'. Do you need to change your target library? Try changing the 'lib' compiler option to include 'dom'.
    